<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24px"
            android:title="@string/title_fragment_home" />
        <item
            android:id="@+id/nav_shop_list"
            android:icon="@drawable/ic_list_black_24px"
            android:title="@string/title_fragment_list" />
        <item
            android:id="@+id/nav_shop_filter"
            android:icon="@drawable/ic_filter_none_black_24px"
            android:title="店家過濾" />
        <item
            android:id="@+id/nav_shop_nearby"
            android:icon="@drawable/ic_near_me_black_24px"
            android:title="@string/title_fragment_nearby" />
        <item
            android:id="@+id/nav_shop_search"
            android:icon="@drawable/ic_search_black_24px"
            android:title="@string/title_fragment_search" />
        <item
            android:id="@+id/nav_shop_favorite"
            android:icon="@drawable/ic_star_border_yellow_24px"
            android:title="@string/title_fragment_favorite" />
    </group>

</menu>
