<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/list_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="#FFAB91"
            android:drawableEnd="@drawable/list_button_icon"
            android:padding="24dp"
            android:text="@string/title_fragment_list"
            android:textSize="20sp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/nearby_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="#A5D6A7"
            android:drawableEnd="@drawable/near_me_button_icon"
            android:padding="24dp"
            android:text="@string/title_fragment_nearby"
            android:textSize="20sp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="#CE93D8"
            android:drawableEnd="@drawable/search_button_icon"
            android:padding="24dp"
            android:text="@string/title_fragment_search"
            android:textSize="20sp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/favorite_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="#81D4FA"
            android:drawableEnd="@drawable/star_border_button_icon"
            android:padding="24dp"
            android:text="@string/title_fragment_favorite"
            android:textSize="20sp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/about_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="#FDD835"
            android:drawableEnd="@drawable/info_button_icon"
            android:padding="24dp"
            android:text="@string/title_activity_about"
            android:textSize="20sp"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</ScrollView>