<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/shopDetailName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:padding="8dp"
                    android:text="@string/default_shop_name"
                    android:textSize="20sp" />
            </LinearLayout>
            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="12dp"
                android:background="@drawable/ic_star_border_yellow_24px"
                android:clickable="true"
                android:onClick="onClick" />
        </RelativeLayout>

        <TextView
            android:id="@+id/shopDetailEvaluation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:padding="8dp"
            android:text="@string/default_shop_evaluation" />

        <TextView
            android:id="@+id/shopDetailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:padding="8dp"
            android:text="@string/default_shop_address" />

        <com.example.leon.delicacyexploration.CustomMapView
            android:id="@+id/shopDetailMapView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="40dp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">
            <LinearLayout
                android:id="@+id/imageLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:orientation="vertical"
            android:layout_gravity="center">
        </LinearLayout>

    </LinearLayout>

</ScrollView>